<resources>
    <string name="app_name">云健康</string>
    <string name="measure">测量</string>
    <string name="data">数据</string>
    <string name="home">主页</string>
    <string name="doctor">医生</string>
    <string name="mine">我的</string>
    <string name="home_health_plan">健康方案选择</string>
    <string name="home_health_plan_container">选择专属方案，个性化管理您的健康</string>
    <string name="home_recipe">食谱</string>
    <string name="home_news">资讯</string>
    <string name="home_yao">用药</string>
    <string name="home_report">报告单</string>
    <string name="data_topic">数据</string>
    <string name="data_dynamic">动态</string>
    <string name="data_data">数据</string>
    <string name="data_report">报告单</string>
    <string name="data_medicate">用药</string>
    <string name="doctors_topic">医生</string>
    <string name="measure_topic">实时数据</string>
    <string name="measure_device_manage">设备管理</string>
    <string name="test">02月06日17时健康医疗要闻回顾：唾液测出孩子天赋？唾液的神奇功效；湖南H7N9疫情上升，专家支招预防方法；村民疑似误食醇基燃料中毒，2死19伤。</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_add_channel">AddChannel</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string name="welcomeString">云健康，守护您的健康</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_login_copy">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_medicine">MedicineActivity</string>
    <string name="appwidget_text">用药提醒</string>
    <string name="add_widget">Add widget</string>
    <string name="medicineIconHint">药品图片</string>


    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="title_healthy_food_menu">健康食谱</string>
    <string name="dialog_food_menu_tagset_hint">点击选中则展示</string>
    <string name="hint_search_key_empty">请输入关键词</string>
    <string name="hint_nothing_but_error">不知道发生了什么，好像出错了呢</string>
    <string name="hint_empity_error">没有加载出来数据哦</string>
</resources>
