<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Android="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    Android:clipToPadding = "true"
    >
    <TextView
        android:background="@color/lightseagreen"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/data_topic"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/data_dynamic"
            android:id="@+id/data_dynamic"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/data_data"
            android:id="@+id/data_data"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/data_report"
            android:id="@+id/data_report"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/data_medicate"
            android:id="@+id/data_medicate"
            />
    </LinearLayout>
    <View
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:background="@color/lightseagreen"
        android:id="@+id/data_line"
        />
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/data_viewPager"
        />
</LinearLayout>